
You might be wondering what this brings over just using the whole JBehave tool
standalone. Well, it gives you access to the Gherkin language in your features,
which is a richer DSL than JBehave's language. -Over 20 spoken languages, Tables, 
Scenario Outlines, the rich command line, the nice output format and everything 
pure Ruby users have been enjoying for a while.

== Bugfixes
* -n option does not suppress the line info for a Scenario Outline (#175 Aslak Hellesøy)
* Errors with rspec-rails matchers in cucumber 0.1.99 (#173 David Chelimsky)
* Can't use an empty string as a table value in a scenario outline (#172 Aslak Hellesøy)
* Really skip skipped steps (#90 Aslak Hellesøy)
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Adding support for Background (#153 Joseph Wilk) 
* Added Česky/Czech (Vojtech Salbaba)
* New --no-multiline option to reduce noise. Useful if lots of features are failing.
* Added ability to pass URIs to cucumber in addition to files and directories. Useful for troubleshooting! (Aslak Hellesøy)
* Groups of tabular scenarios (#57 Aslak Hellesøy)
* Tagging scenarios and features. Pick the ones to run with --tags (#54 Aslak Hellesøy)
* Make the current scenario available to the steps. (#44 Aslak Hellesøy)
* Step definition snippets contain a 'pending' call (#84 Aslak Hellesøy)
* Call multiline steps from other steps (#144 Aslak Hellesøy)
* Run cucumber with --autoformat DIR to reformat (pretty print) all of your feature files. (Aslak Hellesøy)
* New --strict option exits with an error code if there are undefined steps. (#52 Aslak Hellesøy)